[gd_scene load_steps=57 format=2]

[ext_resource path="res://Scenes/ZombieScenes/ComponentManager.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Zombies/Ticker-Sheet.png" type="Texture" id=2]
[ext_resource path="res://Scenes/ZombieScenes/AttackComponent.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/ZombieScenes/SpeedComponent.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/ZombieScenes/HealthComponent.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/Zombies/TickerZombie.gd" type="Script" id=6]
[ext_resource path="res://Assets/Audio/ZombieAttack.mp3" type="AudioStream" id=7]
[ext_resource path="res://Assets/Audio/ZombieHit.mp3" type="AudioStream" id=8]
[ext_resource path="res://Scripts/Zombies/ZombieSpriteComponent.gd" type="Script" id=9]
[ext_resource path="res://Assets/Shaders/basicZombieHitShader.tres" type="Shader" id=10]
[ext_resource path="res://Assets/Zombies/TickerHitEffect-Sheet.png" type="Texture" id=11]
[ext_resource path="res://Scripts/Zombies/AOEHit.gd" type="Script" id=12]
[ext_resource path="res://Assets/Zombies/Animations/Ticker/Ticker-WebSheet.png" type="Texture" id=13]

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 9, 15 )

[sub_resource type="ShaderMaterial" id=16]
shader = ExtResource( 10 )
shader_param/target_color = null
shader_param/replace_color = null
shader_param/tolerance = null

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 798, 0, 57, 39 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 855, 0, 57, 39 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 912, 0, 57, 39 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 969, 0, 57, 39 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 1026, 0, 57, 39 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 1083, 0, 57, 39 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 1140, 0, 57, 39 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 399, 0, 57, 39 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 456, 0, 57, 39 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 513, 0, 57, 39 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 570, 0, 57, 39 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 627, 0, 57, 39 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 684, 0, 57, 39 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 741, 0, 57, 39 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 13 )
region = Rect2( 798, 0, 57, 39 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 13 )
region = Rect2( 855, 0, 57, 39 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 13 )
region = Rect2( 912, 0, 57, 39 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 13 )
region = Rect2( 969, 0, 57, 39 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 13 )
region = Rect2( 1026, 0, 57, 39 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 13 )
region = Rect2( 1083, 0, 57, 39 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 13 )
region = Rect2( 1140, 0, 57, 39 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 13 )
region = Rect2( 399, 0, 57, 39 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 13 )
region = Rect2( 456, 0, 57, 39 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 13 )
region = Rect2( 513, 0, 57, 39 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 13 )
region = Rect2( 570, 0, 57, 39 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 13 )
region = Rect2( 627, 0, 57, 39 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 13 )
region = Rect2( 684, 0, 57, 39 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 13 )
region = Rect2( 741, 0, 57, 39 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 57, 0, 57, 39 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 114, 0, 57, 39 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 171, 0, 57, 39 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 228, 0, 57, 39 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 285, 0, 57, 39 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 342, 0, 57, 39 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "Attack",
"speed": 5.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
}, {
"frames": [ SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ) ],
"loop": true,
"name": "WebAttack",
"speed": 5.0
}, {
"frames": [ SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ) ],
"loop": true,
"name": "WebWalk",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 11 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 11 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 11 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=28]
animations = [ {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=29]
extents = Vector2( 83.0833, 15.6667 )

[node name="TickerZombie" type="Area2D" groups=["Zombie"]]
collision_layer = 2
script = ExtResource( 6 )

[node name="ComponentManager" parent="." instance=ExtResource( 1 )]

[node name="HealthComponent" parent="." instance=ExtResource( 5 )]

[node name="SpeedComponent" parent="." instance=ExtResource( 4 )]

[node name="AttackComponent" parent="." instance=ExtResource( 3 )]

[node name="HurtBoxComp" type="CollisionShape2D" parent="."]
position = Vector2( -1, 5 )
shape = SubResource( 15 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 16 )
position = Vector2( 8, 0 )
frames = SubResource( 14 )
animation = "WebWalk"
frame = 1
playing = true
flip_h = true
script = ExtResource( 9 )

[node name="DMGRayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -36, 0 )
collide_with_areas = true

[node name="AttackTimer" type="Timer" parent="."]

[node name="HitAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[node name="AttackAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="AOEHit" type="Node2D" parent="."]
visible = false
script = ExtResource( 12 )

[node name="Hit1" type="AnimatedSprite" parent="AOEHit"]
visible = false
position = Vector2( -24, 4 )
frames = SubResource( 28 )

[node name="Hit2" type="AnimatedSprite" parent="AOEHit"]
position = Vector2( -96.6667, 4 )
frames = SubResource( 28 )

[node name="Hit3" type="AnimatedSprite" parent="AOEHit"]
position = Vector2( -54.6667, 4 )
frames = SubResource( 28 )

[node name="Hit4" type="AnimatedSprite" parent="AOEHit"]
position = Vector2( -140, 4.66667 )
frames = SubResource( 28 )

[node name="HitBoxComponent" type="Area2D" parent="."]
z_index = 2
collision_layer = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxComponent"]
position = Vector2( -72.25, 4.66667 )
shape = SubResource( 29 )

[connection signal="frame_changed" from="AnimatedSprite" to="AnimatedSprite" method="_on_AnimatedSprite_frame_changed"]
[connection signal="timeout" from="AttackTimer" to="AttackComponent" method="_on_AttackTimer_timeout"]
[connection signal="animation_finished" from="AOEHit/Hit3" to="AOEHit" method="_on_Hit3_animation_finished"]
